--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <p>"There are only two hard things in Computer Science: cache invalidation and naming things."  -- Phil Karlton</p>
         </blockquote>
         <script type="text/html">
-          <strong><span class="label label-{type}"  data-toggle="tooltip" data-placement="top" title="{val}">{val}</span></strong>
+          <span class="label label-{type}"  data-toggle="tooltip" data-placement="top" title="{val}">{val}</span>
         </script>
       </div>
     </div>
@@ -178,9 +178,8 @@
       if(labels.length){
         els.searchResultBd.html(labels.join(''));
         els.searchResult.find('[data-toggle="tooltip"]').tooltip();
-        els.searchResult.show();
       }else{
-        els.searchResult.hide();
+        els.searchResultBd.html('Codelf found nothing :(');
       }
     }
 
