--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <div class="col-lg-12">
       <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search a variable name...e.g.product">
+        <input type="text" class="form-control" placeholder="Search...e.g. elf">
       <span class="input-group-btn">
         <button class="btn btn-secondary" type="button">Search</button>
       </span>
