--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
     }
     .search-form .title{
       text-align: center;
-      padding: 20px 100px;
+      padding: 20px;
     }
     .search-result{
       padding: 40px 0;
     }
     blockquote{
       text-align: center;
+    }
+
+    @media (min-width: 62em) {
+      .search-form .title{
+        padding: 20px 100px;
+      }
     }
   </style>
 </head>
@@ -52,6 +58,7 @@
     </div>
   </section>
 </section>
+<!-- https://github.com/blog/273-github-ribbons -->
 <a href="https://github.com/unbug/codelf"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
 <script src="src/lib/tether/js/tether.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
