--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="description" content="Search over projects from Github, Bitbucket, Google Code, Codeplex, Sourceforge, Fedora Projec to find a variable name for you!" />
   <meta name="keywords" content="variable naming,programming naming,programming variable dictionary">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css"
-        integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+  <link rel="stylesheet" href="resources/css/bootstrap.min.css">
   <style>
     .main-container{
       padding: 40px;
@@ -61,12 +60,10 @@
   </section>
 </section>
 <!-- https://github.com/blog/273-github-ribbons -->
-<a href="https://github.com/unbug/codelf"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+<a href="https://github.com/unbug/codelf"><img style="position: absolute; top: 0; right: 0; border: 0;" src="resources/images/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 <script src="src/lib/tether/js/tether.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js"
-        integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7"
-        crossorigin="anonymous"></script>
+<script src="src/lib/jquery.min.js"></script>
+<script src="src/lib/bootstrap.min.js"></script>
 <script>
   $(function () {
     function randomColor() {
