--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
     .search-result{
       padding: 40px 0;
     }
-    blockquote{
+    .search-result .label-warp{
+      display: inline-block;
+    }
+    .blockquote{
       text-align: center;
+    }
+    .quote-attribution{
+      text-align: right;
     }
 
     @media (min-width: 62em) {
@@ -35,7 +41,7 @@
   <section class="row search-form">
     <header class="title">
       <header><h1>Codelf</h1></header>
-      <h5>Search over projects from Github, Bitbucket, Google Code, Codeplex, Sourceforge, Fedora Projec to find a <span class="label label-success">variable name</span> for you!</h5>
+      <h5>Search over projects from Github, Bitbucket, Google Code, Codeplex, Sourceforge, Fedora Projec to find a <span class="label label-pill label-default">variable name</span> for you!</h5>
     </header>
     <div class="col-lg-12">
       <div class="input-group">
@@ -48,12 +54,14 @@
   </section>
   <section class="row search-result">
     <div class="col-lg-12">
-      <div class="alert alert-success bd" role="alert">
-        <blockquote>
-          <p>"There are only two hard things in Computer Science: cache invalidation and naming things."  -- Phil Karlton</p>
+      <div class="jumbotron bd" role="alert">
+        <blockquote class="blockquote">
+          <h5>"There are only two hard things in Computer Science: cache invalidation and naming things."</h5>
+
+          <h5 class="quote-attribution">-- Phil Karlton</h5>
         </blockquote>
         <script type="text/html">
-          <span class="label label-{type}"  data-toggle="tooltip" data-placement="top" title="{val}">{val}</span>
+          <h5 class="label-warp"><span class="label label-{type}"  data-toggle="tooltip" data-placement="top" title="{val}">{val}</span></h5>
         </script>
       </div>
     </div>
@@ -214,9 +222,7 @@
 
     function renderSearchBtn(){
       var val = els.searchInput.val().trim();
-      if(val.length){
-        els.searchBtn.html(val==els.lastVal?'Next Group':'Search');
-      }
+      els.searchBtn.html((val.length && val==els.lastVal)?'Next Group':'Search');
     }
 
     function getRandomLabelType(){
