--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     .quote-attribution{
       text-align: right;
     }
+    .blockquote img{
+      max-width: 100%;
+      height: auto;
+    }
 
     @media (min-width: 62em) {
       .search-form .title{
@@ -56,9 +60,7 @@
     <div class="col-lg-12">
       <div class="jumbotron bd" role="alert">
         <blockquote class="blockquote">
-          <h5>"There are only two hard things in Computer Science: cache invalidation and naming things."</h5>
-
-          <h5 class="quote-attribution">-- Phil Karlton</h5>
+          <img src="resources/images/twohardtings.png">
         </blockquote>
         <script type="text/html">
           <h5 class="label-warp"><span class="label label-{type}"  data-toggle="tooltip" data-placement="top" title="{val}">{val}</span></h5>
