--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     }
 
     @media (min-width: 62em) {
+      .main-container{
+        padding: 40px 100px;
+      }
       .main-title{
         padding: 0 100px;
       }
