--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <section class="row search-form">
     <div class="col-lg-12">
       <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search...e.g. elf">
+        <input type="text" class="form-control" placeholder="e.g. elf">
       <span class="input-group-btn">
         <button class="btn btn-secondary" type="button">Search</button>
       </span>
