--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     .search-result{
       padding-top: 10px;
     }
+    .search-result .bd{
+      overflow-x: scroll;
+      -webkit-overflow-scrolling: touch;
+    }
     .search-result .label-warp{
       display: inline-block;
     }
@@ -39,6 +43,9 @@
       }
       .main-title{
         padding: 0 50px;
+      }
+      .search-result .bd{
+        overflow-x: auto;
       }
     }
   </style>
@@ -79,6 +86,31 @@
 <script src="src/lib/bootstrap.min.js"></script>
 <script>
   $(function () {
+    var HashHandler = (function () {
+      var lc = window.location;
+
+      function getByURL(url) {
+        var hash;
+        url && decodeURIComponent(url).replace(new RegExp('#(.*)', 'g'), function ($1, $2) {
+          hash = $2;
+        });
+        return hash;
+      }
+
+      function get() {
+        return getByURL(lc.hash);
+      }
+
+      function set(hash) {
+        lc.hash = hash;
+      }
+
+      return {
+        get: get,
+        set: set,
+        getByURL: getByURL
+      }
+    })();
     function randomColor() {
       var letters = '0123456789ABCDEF'.split('');
       var color = '#';
@@ -169,8 +201,11 @@
     searchObj;
 
     function bindEvent(){
+      window.addEventListener('hashchange', onLocationHashChanged, false);
       els.searchInput.on('keyup',renderSearchBtn);
-      els.searchBtn.on('click',onSearch);
+      els.searchBtn.on('click',function(){
+        onSearch();
+      });
       els.searchInput.keypress(function (e) {
         if (e.which == 13) {
           onSearch();
@@ -181,12 +216,23 @@
     function init(){
       bindEvent();
       searchObj = new searchPage(renderSearchResult);
+      onLocationHashChanged();
       renderAnalytics();
     }
 
-    function onSearch(){
-      var val = els.searchInput.val().trim();
+    function onLocationHashChanged(e){
+      e && e.preventDefault();
+      var hash = HashHandler.get();
+      hash && onSearch(decodeURIComponent(hash));
+    }
+    function onSearch(val){
+      if(val==els.lastVal){return;}
+      val = val || els.searchInput.val().trim();
+      els.searchInput.val(val);
       if(val.length){
+        if(val != els.lastVal){
+          HashHandler.set(encodeURIComponent(val));
+        }
         els.lastVal = val;
         els.valRegs = [];
         els.lastVal.replace(/\s+/ig,'+').split('+').forEach(function(key){
@@ -233,10 +279,10 @@
       els.searchBtn.html((val.length && val==els.lastVal)?'Next Group':'Search');
     }
 
-    function renderAnalytics(){
+    function renderAnalytics(param){
       setTimeout(function(){
-        els.body.append('<iframe src="http://www.mihtool.com/analytics.html?codelf" style="display: none;width: 0;height: 0;border: 0;"></iframe>');
-      },3000);
+        els.body.append('<iframe src="http://www.mihtool.com/analytics.html?codelf'+(param?('&s='+param):'')+'" style="display: none;width: 0;height: 0;border: 0;"></iframe>');
+      },param?500:3000);
     }
 
     function getRandomLabelType(){
