--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       text-align: center;
       padding: 0 20px;
     }
+    .main-title h1{
+      transition: all 1s ease-in-out;
+      -webkit-transition: all 1s ease-in-out;
+    }
     .search-form{
       padding: 20px 0;
     }
