--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       text-align: center;
       padding: 0 20px;
     }
+    .main-title>header>a,.main-title>header>a:visited,.main-title>header>a:link,.main-title>header>a:active,.main-title>header>a:hover{
+      color: inherit;
+      text-decoration: none;
+    }
     .main-title h1{
       transition: all 1s ease-in-out;
       -webkit-transition: all 1s ease-in-out;
@@ -57,7 +61,7 @@
 <body>
 <section class="main-container">
   <header class="main-title">
-    <header><h1>Codelf</h1></header>
+    <header><a href="index.html"><h1>Codelf</h1></a></header>
     <h5>Search over projects from Github, Bitbucket, Google Code, Codeplex, Sourceforge, Fedora Projec to find a <span class="label label-pill label-default">variable name</span> for you!</h5>
   </header>
   <section class="row search-form">
@@ -277,7 +281,9 @@
             translateObj.request(tmpch.join(' '),function(tdata){
               if(tdata){
                 els.lastVal = els.lastVal + ' '
-                  + tdata.translation.filter(function(key){
+                  + tdata.translation.join(' ')
+                    .replace(/[!$%^&*()_+|~=`{}\[\]:";'<>?,.\/]/g,'')
+                    .split(' ').filter(function(key){
                     return !/^(a|an|the|that|this|those|these)$/ig.test(key);
                   }).join(' ');
                 beforeDoSearch();
