--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body>
 <section class="main-container">
   <header class="main-title">
-    <header><a href="index.html"><h1>Codelf</h1></a></header>
+    <header><a href="./"><h1>Codelf</h1></a></header>
     <h5>Search over projects from Github, Bitbucket, Google Code, Codeplex, Sourceforge, Fedora Projec to find a <span class="label label-pill label-default">variable name</span> for you!</h5>
   </header>
   <section class="row search-form">
