--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
       els.searchResultBd.html('Codelf is searching...');
       renderSearchBtn();
       renderTitle();
-      renderAnalytics(els.lastVal);
+      renderAnalytics(els.lastInputVal);
     }
 
     function renderTitle(){
