--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
       text-align: center;
       padding: 0 20px;
     }
-    .main-title>header>a,.main-title>header>a:visited,.main-title>header>a:link,.main-title>header>a:active,.main-title>header>a:hover{
+    .main-title>header>a,
+    .main-title>header>a:visited,
+    .main-title>header>a:link,
+    .main-title>header>a:active,
+    .main-title>header>a:hover{
       color: inherit;
       text-decoration: none;
     }
@@ -62,7 +66,8 @@
 <section class="main-container">
   <header class="main-title">
     <header><a href="./"><h1>Codelf</h1></a></header>
-    <h5>Search over projects from Github, Bitbucket, Google Code, Codeplex, Sourceforge, Fedora Projec to find a <span class="label label-pill label-default">variable name</span> for you!</h5>
+    <h5>Search over projects from Github, Bitbucket, Google Code, Codeplex, Sourceforge, Fedora Project and more to find </h5>
+    <h5><span class="label label-pill label-success">real-world usage</span> <span class="label label-pill label-danger">variable names</span></h5>
   </header>
   <section class="row search-form">
     <div class="col-lg-12">
