added real-word usage

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <section class="main-container">
   <header class="main-title">
     <header><a href="./"><h1>Codelf</h1></a></header>
-    <h5>Search over projects from Github, Bitbucket, Google Code, Codeplex, Sourceforge, Fedora Project and more to find </h5>
+    <h5>Search over projects from Github, Bitbucket, Google Code and more to find </h5>
     <h5><span class="label label-pill label-success">real-world usage</span> <span class="label label-pill label-danger">variable names</span></h5>
   </header>
   <section class="row search-form">
