--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
         }
         return dup;
       });
-      els.searchRelateBd.html('<span class="label label-default">Suggestions ></span>'+labels.join(''));
+      els.searchRelateBd.html('<span class="label label-default">History & Suggestion :</span>'+labels.join(''));
     }
 
     function renderAnalytics(param){
